rename parameter 'override_prod' to overwrite_prod'

--- a/action.yml
+++ b/action.yml
@@ -23,7 +23,7 @@ inputs:
     description: ""
     default: ".env"
     required: false
-  override_prod:
+  overwrite_prod:
     description: ""
     default: "false"
     required: false
